--- a/My Design.html
+++ b/My Design.html
@@ -287,7 +287,7 @@
     <div >
     <a href="" class="mns k1"><i class="fa-brands fa-facebook-f afs " ></i></a>&ensp;&ensp;
     <a href="" class="mns k2"><i class="fa-brands fa-instagram afs " id="two"></i></a> 
-    <a href="https://www.linkedin.com/in/althaf-shaik-658138229/" class="mns " id="three"><i class="fa-brands fa-linkedin afs k3"></i></i></a> </div></center>
+    <a href="" class="mns " id="three"><i class="fa-brands fa-linkedin afs k3"></i></i></a> </div></center>
     <br><br><br><br>
    
 
