--- a/My Design.html
+++ b/My Design.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -292,6 +292,6 @@
    
 
 </div>
-</center>
+</center>-->
 
 
